<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_bookmark"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/action_remove_bookmark"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_in_web_view"
        android:icon="@drawable/ic_webview_24dp"
        android:title="@string/action_open_in_web_view"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

</menu>
