<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/screenshot_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/screenshot_header"
        android:textAppearance="@style/TextAppearance.Tachiyomi.SectionHeader" />

    <TextView
        android:id="@+id/set_as_cover"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/set_as_cover"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_photo_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/action_share"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_share_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/action_save"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_save_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <!-- Stats preferences -->

    <TextView
        android:id="@+id/stats_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/stats_header"
        android:textAppearance="@style/TextAppearance.Tachiyomi.SectionHeader" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggleStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/toggle_stats"
        android:textColor="?android:attr/textColorSecondary" />

    <eu.kanade.tachiyomi.widget.MaterialSpinnerView
        android:id="@+id/statsPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stats_pages"
        app:title="@string/stats_page" />
</LinearLayout>
