<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/set_as_cover"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/set_as_cover"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_photo_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/action_share"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_share_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:drawablePadding="32dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/action_save_screenshot"
        android:textColor="?attr/colorOnBackground"
        app:drawableStartCompat="@drawable/ic_save_24dp"
        app:drawableTint="?attr/colorOnBackground" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggleSubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/screenshot_show_subs"
        android:textColor="?android:attr/textColorSecondary" />

</LinearLayout>
