<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:layout_alignParentTop="true"
        android:background="#CC000000"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/exo_overlay_back"
        android:text="@string/player_overlay_back"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:layout_gravity="start"
        android:layout_height="@dimen/exo_media_button_height"
        android:layout_width="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/exo_overlay_title"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="@dimen/exo_media_button_height"
            android:layout_width="wrap_content"/>
    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layoutDirection="ltr"
    android:layout_alignParentBottom="true"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <ImageButton android:id="@+id/watcher_controls_prev"
            style="@style/ExoMediaButton.Previous"
            android:contentDescription="@string/action_previous_episode" />

        <ImageButton android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:contentDescription="@string/action_play" />

        <ImageButton android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:contentDescription="@string/action_pause" />

        <ImageButton android:id="@+id/watcher_controls_next"
            style="@style/ExoMediaButton.Next"
            android:contentDescription="@string/action_next_episode" />

        <TextView
            android:id="@+id/watcher_controls_skip_btn"
            android:text="@string/watcher_controls_skip_text"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/ExoMediaButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="15dp"
            android:paddingEnd="4dp"
            android:includeFontPadding="false"
            android:textColor="#FFBEBEBE"/>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="26dp"/>

        <TextView android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="4dp"
            android:paddingEnd="15dp"
            android:includeFontPadding="false"
            android:textColor="#FFBEBEBE"/>

    </LinearLayout>

</LinearLayout></RelativeLayout>