<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
         You may obtain a copy of the License at
              http://www.apache.org/licenses/LICENSE-2.0
         Unless required by applicable law or agreed to in writing, software
         distributed under the License is distributed on an "AS IS" BASIS,
         WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
         See the License for the specific language governing permissions and
         limitations under the License.-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#70000000"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exo_overlay_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/player_overlay_back"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exo_overlay_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/watcher_controls_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/action_player_settings"
            android:src="@drawable/exo_styled_controls_settings" />



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layoutDirection="ltr"
        android:layout_alignParentBottom="true"
        android:background="#70000000"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:orientation="horizontal">

            <ImageButton android:id="@+id/watcher_controls_fit_screen"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_toLeftOf="@id/watcher_controls_prev"
                android:src="@drawable/exo_styled_controls_fullscreen_enter"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/action_screen_fit" />

            <ImageButton android:id="@+id/watcher_controls_prev"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_toLeftOf="@id/watcher_controls_p_space"
                android:src="@drawable/exo_controls_previous"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/action_previous_episode" />

            <View
                android:id="@+id/watcher_controls_p_space"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center" />

            <ImageButton android:id="@id/exo_play"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/exo_controls_play"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/action_play" />

            <ImageButton
                android:id="@id/exo_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/action_pause"
                android:src="@drawable/exo_controls_pause" />

            <ImageButton android:id="@+id/watcher_controls_next"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_toRightOf="@id/watcher_controls_p_space"
                android:src="@drawable/exo_controls_next"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/action_next_episode" />

            <TextView
                android:id="@+id/watcher_controls_skip_btn"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/watcher_controls_next"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/watcher_controls_skip_text"
                android:textColor="@color/md_white_1000"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView android:id="@id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingStart="15dp"
                android:paddingEnd="4dp"
                android:includeFontPadding="false"
                android:textColor="@color/md_white_1000"/>

            <com.google.android.exoplayer2.ui.DefaultTimeBar
                android:id="@id/exo_progress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="26dp"
                buffered_color="?attr/colorOnSurface"/>

            <TextView android:id="@id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="15dp"
                android:includeFontPadding="false"
                android:textColor="@color/md_white_1000"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>